add launch screen (avoid white screen when cold start) + use animation

--- a/presentation/src/main/res/values/strings.xml
+++ b/presentation/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Presentation</string>
+    <string name="title_activity_launch">LaunchActivity</string>
 </resources>
